# template-press

./: .codecov.yml  .contributors.jsonl  .contributors.yml  .dockerignore  .editorconfig  .editorconfig-checker.json  .gitignore  .gitleaks.toml  .gitleaksignore  .pypirc.template  .readthedocs.yaml  .taplo.toml  .yamlfmt  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  EXAMPLECLI.md  EXAMPLEWEB.md  Justfile  LICENSE  Makefile  PROJECTS.md  README.md  answers.toml  commitlint.config.mjs  commitlint.dependabot.config.mjs  lefthook.yml  llms.txt  mise.toml  package.json  pyproject.toml  release-please-config.json
.agents/skills/: new-python-project
.claude/skills/new-python-project/: README.md  SKILL.md
.claude/skills/press-target/: SKILL.md
.claude/skills/rebrand-matrix/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
.flox/: .gitignore  env.json
.flox/env/: manifest.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-feature-request.yml  02-documentation-request.yml  03-bug-report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: api-contract.yml  blueprint-guard.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  commitlint.yml  dep-audit.yml  dependency-review.yml  init-integration.yml  large-file-guard.yml  lint.yml  manual-pr-security-scan.yml  publish.yml  rebrand-matrix.yml  release-please.yml  secret-scan.yml  update-contributors.yml
.project-harness/: project-harness.config.json
docs/: POST_INIT.md  README.md  RELEASE.md
docs/adr/: 0001-app-short-name-plbp.md  0001-app-short-name-press.md  0002-no-secrets-in-config-file.md  0003-keep-markdown-output-mode.md  0004-config-errors-degrade-to-warnings.md  0005-mise-flox-first-class-toolchains.md  0006-stable-error-codes-hints-crash-log.md  0007-did-you-mean-stdlib-difflib.md  0008-pager-for-long-text-output.md  0009-config-init-and-first-run-hint.md  0010-rich-row-variant-on-result-models.md  0011-windows-native-paths-xdg-overrides.md  0012-doctor-bundle-redact-at-collection.md  0013-web-service-best-practices.md  0014-repo-simplification-batch.md  0015-one-logging-pipeline-two-profiles.md  0016-app-short-name-placeholder.md  README.md  template.md
docs/api/: openapi.json
docs/design/: 0001-plbp-cli-conventions.md  0001-press-cli-conventions.md  0002-web-api-conventions.md  0003-logging-conventions.md  0004-template-press-plan.md  0005-template-press-tui-design.md  0006-external-target-model.md  0007-press-verify-design.md  0008-identity-variants-and-replace-rules.md  README.md
docs/research/: 0001-skill-trigger-optimization.md  0002-dev-tooling-wishlist.md  0003-init-post-init-analysis.md  0004-py-launch-blueprint-conformance-gaps.md  0004-template-press-dogfood-log.md  0005-scaffolder-identity-variant-handling.md  README.md
docs/source/: conf.py  docs.md  github-templates.md  index.md
docs/source/_templates/: base.html
docs/source/about/: features.md  index.md  philosophy.md
docs/source/contributing/: CODE_OF_CONDUCT.md  cla_faq.md  index.md
docs/source/reference/: cli.md  cli_reference.md  configuration_files.md  index.md  project_structure.md  versioning.md
docs/source/tasks/: contributing_code.md  debugging_configuration.md  index.md  managing_dependencies.md  setting_up_development.md  type_checking_code.md  using_ci_cd.md
docs/source/tools/: cla-assistant.md  code-cov.md  github_actions.md  index.md  justfiles.md  makefiles.md  precommit_hooks.md  pytest.md  ruff.md  taplo.md  ty.md  uv.md  vs_code.md  yaml_lint.md
docs/source/tutorials/: full_project_setup.md  index.md
docs/source/web/: index.md
docs/superpowers/plans/: 2026-06-12-template-press-bootstrap-dogfood.md  2026-06-23-rebrand-core.md  2026-07-08-m4-shed-residue.md  2026-07-16-press-dir-rename.md  2026-07-17-press-verify.md  2026-07-23-press-cde-gaps.md
docs/superpowers/specs/: 2026-06-12-template-press-bootstrap-dogfood-design.md  2026-06-13-template-press-bootstrap-dogfood-v2-design.md  (+1 more)
init/: .blueprint-initialized  README.md  _engine.py  _rewriters.py  common.py  discover.py  guard.sh  init-spec.md  init.py  init_doctor.py  manifest.toml  post_init.py  setup-github-environments.sh  setup-pypi-publishing.sh
init/ci/: check_guard_wiring.py  check_manifest_drift.py  check_no_marker.sh  check_path_filter.py
init/tests/: conftest.py  test_conftest_guard.py  test_cross_language_drift.py  test_doctor.py  test_doctor_post_init.py  test_drift_per_field.py  test_manifest.py  test_modes.py  test_post_init.py  test_reset.py
projects/: P01-init-rebrand-robustness.md  P02-repo-simplification.md  P03-external-target-rebrand-press-.md
prototypes/press_tui/: README.md  decisions.py  interview.py  test_decisions.py
scripts/: check-gitleaks.sh  export_openapi.py  install-bun.sh  install-gitleaks.sh  install-lefthook.sh  rebrand_matrix.sh
src/py_launch_blueprint/: __init__.py
src/template_press/: __init__.py  press_cli.py
tests/: __init__.py  conftest.py
tests/cli/: test_help_snapshots.py  test_output.py  test_pylb.py
tests/core/: test_core.py  test_format.py  test_logging.py  test_paths.py
tests/meta/: test_contributors_render.py  test_contributors_state.py  test_contributors_workflow.py  test_justfile.py  test_version_consistency.py
tests/rebrand/: conftest.py  test_cde_gaps.py  test_cli.py  test_config.py  test_discovery.py  test_doctor.py  test_engine_enumerate.py  test_engine_plan.py  test_engine_rename.py  test_engine_replace.py  test_fixtures.py  test_git_hardening.py  test_identity.py  test_ignores.py  test_inventories.py  test_matcher.py  test_matrix.py  test_press_cli.py  test_press_guard.py  test_receipt.py  test_rules.py  test_safety.py  test_sandbox.py  test_synthesize.py  test_verifier.py  test_verify_cli.py  test_verify_config.py
tests/web/: conftest.py  test_app.py  test_contract.py  test_idempotency.py  test_logging.py  test_openapi_snapshot.py  test_settings.py  test_versioning.py
(+88 files in other folders)
