# Copyright (c) 2026, Steve Morin
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of
# this software and associated documentation files (the "Software"), to deal in
# the Software without restriction, including without limitation the rights to
# use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
# the Software, and to permit persons to whom the Software is furnished to do so,
# subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
# FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
# COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
# IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[project]
name = "template_press"
# ITM-070 — static version (ADR-06 cutover). release-please bumps this.
version = "2.1.1"
description = "Standalone rebrand utility — press a new identity onto an external target repo"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT" # PEP 639 license expression (ITM-070, round-19).
authors = [{ name = "Steve Morin", email = "steve.morin@gmail.com" }]
classifiers = [
  # ITM-070 — round-19. py3.12+ only (per ITM-033 floor); MIT classifier
  # intentionally omitted (PEP 639 license expression above is the single
  # source of truth — duplication would drift).
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# The rebrand engine is pure standard library (tomllib, re, dataclasses,
# subprocess) — the shipped utility has ZERO runtime dependencies.
dependencies = []

# ITM-063 — PEP 735 dependency-groups (round-13 decision). Replaces
# [project.optional-dependencies] dev+docs. Install via `uv sync --group <name>`.
[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ty>=0.0.56",        # per ADR-03 (pre-1.0; bump as needed)
  "ruff>=0.15.20",
  "cogapp",
  # WL-001 — hook/CI tools pinned via uv.lock (run with `uv run`, not floating
  # `uvx`), so local hooks and CI use the same version and upgrades arrive as
  # reviewable dependabot PRs instead of surprise breakage.
  "bandit>=1.9.4",
  "codespell>=2.4.2",
  "editorconfig-checker>=3.6.1",
  "yamllint>=1.38.0",
  "pip-audit>=2.10.1",            # WL-014 — `just audit` + scheduled dep-audit workflow
  "twine>=6.2.0",                # WL-004 — dist metadata check in the build-smoke CI job
  "syrupy>=5.5.1",               # WL-023 — CLI --help snapshot tests
]

docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme",
  "furo",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "cogapp",
  "sphinx-copybutton",
  "sphinx-autobuild",
  "sphinxext-opengraph",      # https://github.com/wpilibsuite/sphinxext-opengraph
]


[project.scripts]
# Noun-verb CLI (design 0006 §2): press <verb>. `rebrand` is live; `provision`
# and `status` arrive with the M6 Provision phase.
press = "template_press.press_cli:main"
# Alias escape hatch (design 0004 §2): a legacy `press` exists on PyPI, so
# ship `tpress` as a collision-proof alias console script.
tpress = "template_press.press_cli:main"

# ITM-072 — package metadata URLs (round 19).
[project.urls]
Homepage = "https://github.com/smorinlabs/template-press"
Repository = "https://github.com/smorinlabs/template-press"
Documentation = "https://template-press.readthedocs.io/en/latest/"
Changelog = "https://github.com/smorinlabs/template-press/blob/main/CHANGELOG.md"
Issues = "https://github.com/smorinlabs/template-press/issues"

# ITM-073 — uv_build (ADR-06 cutover; replaces Hatchling + hatch-vcs).
[build-system]
requires = ["uv_build>=0.5,<1.0"]
build-backend = "uv_build"

# ITM-074 — uv_build module configuration.
# Template uses a flat layout (package at repo root, not src/) — must set
# module-root = "" so uv_build doesn't expect src/template_press/.
[tool.uv.build-backend]
module-name = "template_press"
# src/ layout (Decision 1) — package now lives at src/template_press/.
module-root = "src"

[tool.ruff]
# ITM-018 reconciled config (round-2). Merge: template's stricter rule
# selection + source's ignore rationale. target-version reflects ITM-033
# Python-floor bump.
target-version = "py312"
line-length = 88

lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
  "W",   # pycodestyle warnings
  "YTT", # flake8-2020
  "S",   # flake8-bandit
]

# Source's ignore rationale (round-2): line-length handled by formatter;
# template-applicable subset adopted (B904/B007 omitted — source-specific
# patterns that don't apply here).
lint.ignore = [
  "E501", # line too long (formatter owns this)
  "W293", # whitespace on blank line (formatter owns trim_trailing)
]

# Allow autofix behavior for specific rules
fix = true
lint.unfixable = [] # Rules that should not be fixed automatically

# Exclude files/folders
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "docs/source/conf.py",
  "src/template_press/_version.py",
  "prototypes",  # P0004 template-press engine prototypes (own lint config in template-press)
]
# Per-file-ignores
[tool.ruff.lint.pycodestyle]
max-line-length = 88
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py files
"tests/*" = ["S101", "S105", "S106"] # Ignore assert statements in tests
# S101: assert statements removed under -O — security risk if assert is the only gate.
# S105/S106: hardcoded password strings/variables in code.

# ITM-018 — explicit format config (round-2; mirrors source). Values match Ruff
# defaults but being explicit prevents silent drift if defaults change.
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Pyright/Pylance (IDE) strict type checking — formerly pyrightconfig.json.
# CI typechecking runs ty (ADR-03); this section drives the VS Code Pyright
# extension and ad-hoc `pyright` runs.
[tool.pyright]
include = ["src/template_press", "tests"]
exclude = ["**/node_modules", "**/__pycache__"]
defineConstant = { DEBUG = true }
typeCheckingMode = "strict"
pythonVersion = "3.12"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportDuplicateImport = true
reportPrivateUsage = "warning"
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedClass = true

# ITM-027 — bandit config (round 3). Tests legitimately use `assert`
# (pytest convention) — exclude_dirs covers tests/.
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = []                                                       # No global skips; add with rationale only.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Marker taxonomy (ITM-046, round-9 decision).
# `live` = requires external services; `slow` = takes >1s.
# Default `addopts` excludes both — run full suite with `pytest -m ""`.
markers = ["live: requires external services", "slow: takes >1s"]
addopts = "-m 'not live and not slow'"
strict_markers = true

# ITM-015 — codespell. US English baseline (default builtin="clear,rare"); empty
# ignore list — add terms only when intentional. Decided round 9.
[tool.codespell]
skip = ".git,.venv,build,dist,node_modules,uv.lock,bun.lock,*.lock,docs/_build,*.svg,*.cast,.ruff_cache,.pytest_cache,.mypy_cache,.ty_cache,*.log"
# *.log: raw run output, not prose.
ignore-words-list = "ans,porjects"
# ans: variable name used in prompt-handling code; codespell wants to "fix"
# it to "and". Whitelist to keep the short variable name.
# porjects: intentional typo — the did-you-mean example in cli/groups.py and
# its test ("press porjects" must suggest "projects").
check-filenames = true
check-hidden = false
